contact from in progress fix overflow3

--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -33,21 +33,21 @@
     justify-content: flex-start;
     overflow: hidden;
     .left {
-      flex: 1;
+      flex: 5;
       img {
-        height: 380px;
+        height: 350px;
         overflow: hidden;
       }
     }
     .right {
-      flex: 1;
+      flex: 7;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       form {
-        height: 380px;
-        margin-top: 30px;
+        height: 320px;
+        margin-top: 40px;
         display: flex;
         flex-direction: column;
         align-items: center;
